# tthelper

./: .gitignore  README.md  pf2_data_notes.txt
client/: package-lock.json  package.json
client/src/: app.d.ts  hooks.server.ts
client/src/routes/login/: +page.server.ts  +page.svelte
data_server/: .env  Cargo.toml  diesel.toml  secret.key
data_server/migrations/: init.sql
data_server/migrations/2024-06-12-213345_create_pf2/: down.sql  up.sql
data_server/migrations/pf2/: ancestry.sql  archetype.sql  background.sql  character.sql  class.sql  creature.sql  items.sql  system.sql
data_server/src/: auth.rs  main.rs  pf2_services.rs
data_server/src/db/: db_enums.rs  dbms.rs  mod.rs  models.rs  schema.rs  user_mgmt.rs
data_server/src/pf2/: mod.rs  pf2_services.rs  utils.rs
data_server/src/scrape/: scrape.rs
webclient/: package-lock.json  package.json
webclient/src/: hooks.server.ts
webclient/src/lib/: pf2_services_types.ts  pf2_utils.ts
webclient/src/lib/components/: CharacterSheet.svelte  NewCharacter.svelte
webclient/src/lib/components/pf2/: CharacterSheet.svelte  NewCharacter.svelte
webclient/src/lib/components/pf2/sheet_subcomponents/: Abilities.svelte  Attacks.svelte  SkillList.svelte
webclient/src/routes/: +page.server.ts
webclient/src/routes/login/: +page.server.ts
webclient/src/routes/signup/: +page.server.ts  +page.svelte
webclient/src/routes/userhome/: +layout.server.ts  +page.server.ts  +page.svelte
webclient/src/routes/userhome/character/[cid]/: +server.ts
webclient/src/routes/userhome/character/[cid]/abilities/: +server.ts
webclient/src/routes/userhome/character/[cid]/skill/[skill_id]/: +server.ts
