[package]
name = "data_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
quinn = "0.10.2"
diesel = { version = "2.1.0", features = [
    "postgres",
    "64-column-tables",
    "r2d2",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
juniper = "0.16.1"
dotenvy = "0.15.7"
argon2 = "0.5.3"
log = "0.4.22"
