[package]
name = "data_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }

actix-web = "4"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }

diesel = { version = "2.1.0", features = [
    "postgres",
    "64-column-tables",
    "r2d2",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

dotenvy = "0.15.7"
argon2 = "0.5.3"
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
serde = { version = "1.0.203", features = ["derive"] }
jsonwebtoken = "9"
chrono = "0.4.38"
serde_json = "1.0.120"
env_logger = "0.11.3"
